--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 	"module": "./release/video.module",
 	"typings": "./release/video.module.d.ts",
 	"scripts": {
+		"start": "ng serve",
 		"test": "ts-mocha ./src/**/*.spec.ts",
 		"pretest": "npm run build",
 		"test:watch": "./scripts/watch.sh test",
@@ -42,10 +43,11 @@
 		"zone.js": "^0.8.17"
 	},
 	"dependencies": {
+		"@types/vimeo__player": "^2.0.1",
 		"@vimeo/player": "^2.2.0"
 	},
 	"devDependencies": {
-		"@angular/cli": "^1.4.3",
+		"@angular/cli": "^1.4.4",
 		"@angular/common": "^4.2.3",
 		"@angular/compiler": "^4.2.3",
 		"@angular/compiler-cli": "^4.2.3",
@@ -54,31 +56,36 @@
 		"@angular/http": "^4.2.3",
 		"@angular/platform-browser": "^4.2.3",
 		"@angular/platform-browser-dynamic": "^4.2.3",
-		"@angular/router": "^4.4.3",
-		"@ngx-translate/core": "^6.0.1",
-		"@ngx-translate/http-loader": "0.0.3",
-		"@types/chai": "^4.0.4",
-		"@types/mocha": "^2.2.43",
+		"@angular/router": "^4.2.3",
+		"@compodoc/compodoc": "^1.0.1",
+		"@types/jasmine": "2.5.47",
 		"@types/node": "^8.0.28",
-		"@types/vimeo__player": "^2.0.1",
+		"codelyzer": "2.0.0",
+		"core-js": "2.4.1",
 		"cuid": "^1.3.8",
-		"kio-ng2-component-routing": "github:afkm/kio-ng2-component-routing",
-		"kio-ng2-ctn": "github:afkm/kio-ng2-ctn",
-		"kio-ng2-data": "github:afkm/kio-ng2-data",
-		"kio-ng2-i18n": "github:afkm/kio-ng2-i18n",
-		"kio-ng2-scrolling": "github:afkm/kio-ng2-scrolling",
-		"kio-ng2-sitemap": "github:afkm/kio-ng2-sitemap",
-		"kio-ng2-uiux": "github:afkm/kio-ng2-uiux",
-		"mocha": "^3.5.3",
-		"ng-inline-svg": "^3.0.0",
-		"ng2-page-scroll": "^4.0.0-beta.9",
-		"node-sass": "^4.5.3",
+		"jasmine-core": "2.6.4",
+		"jasmine-spec-reporter": "3.2.0",
+		"karma": "1.7.0",
+		"karma-chrome-launcher": "2.1.1",
+		"karma-cli": "1.0.1",
+		"karma-coverage-istanbul-reporter": "0.2.0",
+		"karma-jasmine": "1.1.0",
+		"karma-jasmine-html-reporter": "0.2.2",
+		"kio-ng2-component-routing": "github:afkm/kio-ng2-component-routing#v0.1.4",
+		"kio-ng2-ctn": "github:afkm/kio-ng2-ctn#v0.0.7",
+		"kio-ng2-data": "github:afkm/kio-ng2-data#v0.0.1",
+		"kio-ng2-i18n": "github:afkm/kio-ng2-i18n#v0.0.3",
+		"kio-ng2-navigation": "github:afkm/kio-ng2-navigation#v0.0.2",
+		"kio-ng2-scrolling": "github:afkm/kio-ng2-scrolling#v0.0.4",
+		"kio-ng2-sidebar": "github:afkm/kio-ng2-sidebar#v0.0.0",
+		"kio-ng2-uiux": "github:afkm/kio-ng2-uiux#v0.0.5",
+		"ng-inline-svg": "3.0.0",
 		"nodemon": "^1.12.0",
+		"protractor": "5.1.0",
 		"rxjs": "^5.4.3",
-		"ts-mocha": "^1.0.3",
 		"ts-node": "^3.3.0",
-		"tslint": "^5.7.0",
-		"typescript": "^2.3.4",
+		"tslint": "4.5.0",
+		"typescript": "2.3.4",
 		"zone.js": "^0.8.17"
 	}
 }
