--- a/package.json
+++ b/package.json
@@ -33,9 +33,10 @@
 		"@angular/forms": "^4.2.3",
 		"@angular/platform-browser": "^4.2.3",
 		"@angular/platform-browser-dynamic": "^4.2.3",
-		"kio-ng2-ctn": "^0.0.0",
+		"kio-ng2-ctn": "^0.1.3",
+		"kio-ng2-component-routing": "^0.1.10",
 		"kio-ng2-uiux": "^0.0.1",
-		"kio-ng2-data": "^0.0.1",
+		"kio-ng2-data": "^0.0.2",
 		"ng-inline-svg": "^3.0.0",
 		"rxjs": "^5.4.3",
 		"zone.js": "^0.8.17"
@@ -69,7 +70,7 @@
 		"karma-coverage-istanbul-reporter": "0.2.0",
 		"karma-jasmine": "1.1.0",
 		"karma-jasmine-html-reporter": "0.2.2",
-		"kio-ng2-component-routing": "github:afkm/kio-ng2-component-routing#v0.1.9",
+		"kio-ng2-component-routing": "github:afkm/kio-ng2-component-routing#v0.1.10",
 		"kio-ng2-ctn": "github:afkm/kio-ng2-ctn#v0.1.3",
 		"kio-ng2-data": "github:afkm/kio-ng2-data#v0.0.2",
 		"kio-ng2-i18n": "github:afkm/kio-ng2-i18n#v0.0.3",
